--- a/game.ipynb
+++ b/game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,13 @@
     "from pydantic import BaseModel, ValidationError\n",
     "from typing import List\n",
     "from datetime import datetime\n",
-    "import pydantic_core\n",
     "\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +229,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class MyTeam(BaseModel):\n",
+    "    pick_order: int\n",
+    "    hero_code: str\n",
+    "    attack_damage: int\n",
+    "    receive_damage: float\n",
+    "    recovery: int\n",
+    "    mvp_point: int\n",
+    "    artifact: str\n",
+    "    equip: list\n",
+    "    respawn: int\n",
+    "    mvp: int\n",
+    "    kill_count: int\n",
+    "    attribute_cd: str\n",
+    "    job_cd: str\n",
+    "\n",
+    "class TeamBettleInfoenemy(BaseModel):\n",
+    "    my_team: List[MyTeam]\n",
+    "\n",
     "class Battle(BaseModel):\n",
     "    battleCompletedate: datetime\n",
     "    teamBettleInfoenemy: str\n",
@@ -252,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +285,7 @@
        "__main__.Response"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +294,40 @@
     "my_cool_response = Response.model_validate(resp.json())\n",
     "print(my_cool_response)\n",
     "type(my_cool_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NEW\n",
+    "\n",
+    "for i in range(len(my_cool_response.result_body.battle_list)):\n",
+    "    my_cool_response.result_body.battle_list[i].teamBettleInfoenemy = (\n",
+    "        TeamBettleInfoenemy.model_validate_json(\"{\" + my_cool_response.result_body.battle_list[i].teamBettleInfoenemy+ \"}\")\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TeamBettleInfoenemy(my_team=[MyTeam(pick_order=1, hero_code='c2039', attack_damage=0, receive_damage=0.0, recovery=0, mvp_point=0, artifact='efh06', equip=['set_counter', 'set_max_hp'], respawn=0, mvp=0, kill_count=0, attribute_cd='dark', job_cd='manauser'), MyTeam(pick_order=2, hero_code='c5089', attack_damage=0, receive_damage=0.0, recovery=0, mvp_point=5220, artifact='efa02', equip=['set_torrent', 'set_speed'], respawn=0, mvp=0, kill_count=0, attribute_cd='wind', job_cd='assassin'), MyTeam(pick_order=3, hero_code='c2112', attack_damage=0, receive_damage=0.0, recovery=0, mvp_point=33060, artifact='efr16', equip=['set_acc', 'set_speed'], respawn=0, mvp=0, kill_count=0, attribute_cd='dark', job_cd='ranger'), MyTeam(pick_order=4, hero_code='c1014', attack_damage=34800, receive_damage=0.0, recovery=0, mvp_point=69600, artifact='efa07', equip=['set_cri', 'set_speed'], respawn=0, mvp=1, kill_count=2, attribute_cd='wind', job_cd='assassin'), MyTeam(pick_order=5, hero_code='c2004', attack_damage=0, receive_damage=0.0, recovery=0, mvp_point=0, artifact='', equip=[], respawn=0, mvp=0, kill_count=0, attribute_cd='light', job_cd='ranger')])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_cool_response.result_body.battle_list[4].teamBettleInfoenemy"
    ]
   },
   {
@@ -876,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
